--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="gflex">
         <div class="main">
-            <img src="../IMAGES/namrata1.jpeg" alt="namrata image" height="200px">
+            <img src="IMAGES/namrata1.jpeg" alt="namrata image" height="200px">
             <h3 class="desc">
                 Namrata Yadav
             </h3>
